fixed some nav alignment

--- a/src/navigation.css
+++ b/src/navigation.css
@@ -180,7 +180,7 @@ body{
 }
 /* this */
 .small{
-    height: 70%;
+    height: 71.5%;
 }
 
 /* this */
